2009-09-18  Peter Johansson  <trojkan@gmail.com>  (tiny change)

	Fix link to "Recursive Make Considered Harmful" paper.
	* doc/automake.texi (Alternative): Fix broken URL.

2009-09-11  Reuben Thomas <rrt@sc3d.org>  (tiny patch)

	Fix outdated reference to sh-utils in the manual.
	* doc/automake.texi (Options): The reference to `sh-utils'
	should be to `coreutils'.

2009-11-28  Jim Meyering  <meyering@redhat.com>

	do not put world-writable directories in distribution tarballs
	* lib/am/distdir.am (distdir): Do not make all directories
	group- or world-writable.  Instead, use 755.
	* NEWS: Update.

2009-07-08  Jim Meyering  <meyering@redhat.com>

	manual: fix a trivial grammar error.
	* doc/automake.texi (Invoking aclocal): Fix grammar.

2009-06-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	AM_PROG_GCJ: use AC_CHECK_TOOLS for gcj, for cross compilation.
	* m4/gcj.m4 (AM_PROG_GCJ): Use AC_CHECK_TOOLS, rather than
	AC_CHECK_PROGS, when searching for `gcj'.
	* NEWS: Update.
	Report by Jack Kelly.

2009-05-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	testsuite: unset installation directory variables.
	* tests/defs.in: Before test execution, be sure to unset all
	installation directory variables, so they cannot have an effect
	on a `make -e install' command within a test.
	Report by Dagobert Michelsen.

	testsuite: do not change the mode of installed Libtool files.
	* tests/defs.in: Do not use `chmod -R' on the test directory, as
	that may change or try to change the mode of installed files:
	the test directory may contain symlinks to ltmain.sh files from
	a Libtool installation, and Solaris `chmod -R' touches symlink
	targets.  Instead, use the cleanup strategy used in distdir.am.
	* NEWS: Update.
	Report by Dagobert Michelsen.

2009-05-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	For PR automake/540:
	Document some formatting restrictions for Makefile.am files.
	* doc/automake.texi (General Operation, Usage of Conditionals):