@@ -1,3 +1,13 @@
+2009-10-06  Bruno Haible  <bruno@clisp.org>
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix 'compile' script to not call mv when target equals source.
+	* lib/compile: Don't attempt to move the generated file to its
+	target destination when it is already at the target destination.
+	Avoids an mv failure with subdir-objects.
+	* tests/ccnoco3.test: New test.
+	* tests/Makefile.am: Adjust.
+
 2009-09-18  Peter Johansson  <trojkan@gmail.com>  (tiny change)
 
 	Fix link to "Recursive Make Considered Harmful" paper.
